--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Prueba web</h1>
+        <h2> jejeje titulo </h2>
         <p>Prueba del taller 1/12/16 de GitHubPages.</p>
 
         <p class="view"><a href="https://github.com/teresalgarra/prueba_web">View the Project on GitHub <small>teresalgarra/prueba_web</small></a></p>
