--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Prueba blablabla web</h1>
         <p>Prueba del taller 1/12/16 de GitHubPages.</p>
         
-        <a> href="http://github.com/teresalgarra">Mi perfil en Github></a>
+        <a href="http://github.com/teresalgarra">Mi perfil en Github</a>
 
         <p class="view"><a href="https://github.com/teresalgarra/prueba_web">View the Project on GitHub <small>teresalgarra/prueba_web</small></a></p>
 
